# gitrel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gitrel  make_deps
src/: gitrelation.c
